Login added to Manifest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">example</string>
+    <string name="app_name">kannect</string>
     <string name="title_activity_binding">BindingActivity</string>
     <string name="title_activity_group_form">GroupForm</string>
     <string name="title_activity_group_view">GroupView</string>
