--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="eventName">Name</string>
     <string name="title_activity_login2">Sign in</string>
     <string name="logout">Abmelden</string>
+    <string name="typePost">Text eingeben...</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
