--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">kannect</string>
+    <string name="create">Erstellen</string>
     <string name="title_activity_binding">BindingActivity</string>
     <string name="title_activity_group_form">GroupForm</string>
     <string name="title_activity_group_view">GroupView</string>
