--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,16 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+
+    <string name="default_web_client_id" translatable="false">963952173312-rpfvhcumlsplr2cjfej2nhn8a8lpn688.apps.googleusercontent.com</string>
+    <string name="firebase_database_url" translatable="false">https://kannect-client-app.firebaseio.com</string>
+    <string name="gcm_defaultSenderId" translatable="false">963952173312</string>
+    <string name="google_api_key" translatable="false">AIzaSyC4Jt9j9CJ3f01iPUOiGmjRnFKOYHl1AuQ</string>
+    <string name="google_app_id" translatable="false">1:963952173312:android:61b6817e3558dbff</string>
+    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyC4Jt9j9CJ3f01iPUOiGmjRnFKOYHl1AuQ</string>
+    <string name="google_storage_bucket" translatable="false">kannect-client-app.appspot.com</string>
+    <string name="project_id" translatable="false">kannect-client-app</string>
+
+
 </resources>
