--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,9 +38,10 @@
     <string name="eventDescription">Beschreibung</string>
     <string name="eventImageUrl">Bild Url</string>
     <string name="eventName">Name</string>
+    <string name="eventDate">Datum</string>
     <string name="title_activity_login2">Sign in</string>
     <string name="logout">Abmelden</string>
-    <string name="typePost">Text eingeben...</string>
+    <string name="typePost">Text eingeben…</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
