--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="title_activity_login2">Sign in</string>
     <string name="logout">Abmelden</string>
     <string name="typePost">Text eingeben…</string>
-
+    <string name="post">Posten</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
